# hypersphere

./: .gitignore  .gitmodules  .travis.yml  LICENCE  README.md  hypersphere.cabal  stack.yaml
bench/: Main.hs
example/: Main.hs
lib/Hypersphere/: Check.hs  Density.hs  Metric.hs  Sample.hs
lib/Hypersphere/Metric/: Csv.hs
src/Hypersphere/: Check.hs  Density.hs  PhysicalInput.hs  Sample.hs
test/: Main.hs
