name:                hypersphere
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENCE
author:              Luke Clifton
maintainer:          ltclifton@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library 
  exposed-modules:
    Hypersphere.Check
    Hypersphere.PhysicalInput
    Hypersphere.Sample
    Hypersphere.Density
    Hypersphere.Metric
    Hypersphere.Metric.Csv

  build-depends:
      base                   >= 4.9   && < 5
    , aeson                  >= 1.0   && < 1.3
    , attoparsec             >= 0.12  && < 0.14
    , bytestring             >= 0.9.2 && < 0.11
    , cassava                >= 0.4   && < 0.6
    , Chart                  == 1.8.*
    , Chart-diagrams         == 1.8.*
    , chronologique          == 0.3.*
    , containers             == 0.5.*
    , contravariant          == 1.4.*
    , data-default           == 0.7.*
    , deepseq                == 1.4.*
    , directory              == 1.3.*
    , influxdb               == 1.2.*
    , lens                   >= 4.15  && < 4.17
    , log-domain             == 0.11.*
    , monad-bayes            
    , mtl                    == 2.2.*
    , mwc-random             == 0.13.*
    , safe                   == 0.3.*
    , statistics             == 0.13.*
    , text                   == 1.2.*
    , time                   >= 1.6   && < 2.0
    , transformers           == 0.5.*
    , unordered-containers   == 0.2.*
    , vector                 >= 0.10  && < 0.13
    , vector-algorithms      == 0.7.*

  hs-source-dirs:      lib
  default-language:    Haskell2010

executable example
  main-is: Main.hs
  ghc-options: -O2
  build-depends:
      base                   >= 4.9   && < 5
    , aeson
    , bytestring
    , Chart
    , Chart-diagrams
    , containers
    , hypersphere
    , monad-bayes
    , text
  hs-source-dirs:      example
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base                   >= 4.9   && < 5
    , aeson
    , bytestring
    , Chart
    , Chart-diagrams
    , containers
    , hypersphere
    , monad-bayes
    , tasty                  == 0.11.*
    , tasty-hunit            == 0.9.*
    , tasty-quickcheck       == 0.8.*
    , quickcheck-instances   == 0.3.*
    , text
    , vector

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
      base                   >= 4.9   && < 5
    , criterion
    , deepseq
    , hypersphere
    , vector
  ghc-options: -O2
